--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 <body>
   <!-- <script src="./Heroic Inventory.js"></script> -->
 
-  <!-- <div id="holder"></div>
-  <script src="./JSON’s Table.js"></script> -->
+  <div id="holder"></div>
+  <script src="./JSON’s Table.js"></script>
 
   <!-- <script src="./Cappy Juice.js"></script> -->
 
   <!-- <script src="./Store Catalogue.js"></script> -->
 
-  <script src="./Auto-Engineering Company.js"></script>
+  <!-- <script src="./Auto-Engineering Company.js"></script> -->
+
+  <!-- <script src="./System Components.js"></script> -->
 </body>
 </html>
