refactor Cappy Juice task

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
   <!-- <script src="./Heroic Inventory.js"></script> -->
 
-  <div id="holder"></div>
-  <script src="./JSON’s Table.js"></script>
+  <!-- <div id="holder"></div>
+  <script src="./JSON’s Table.js"></script> -->
 
-  <!-- <script src="./Cappy Juice.js"></script> -->
+  <script src="./Cappy Juice.js"></script>
 
   <!-- <script src="./Store Catalogue.js"></script> -->
 
