refactor Store Catalogue task

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!-- <div id="holder"></div>
   <script src="./JSON’s Table.js"></script> -->
 
-  <script src="./Cappy Juice.js"></script>
+  <!-- <script src="./Cappy Juice.js"></script> -->
 
-  <!-- <script src="./Store Catalogue.js"></script> -->
+  <script src="./Store Catalogue.js"></script>
 
   <!-- <script src="./Auto-Engineering Company.js"></script> -->
 
