refactor Store Catalogue task

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
   <!-- <script src="./Cappy Juice.js"></script> -->
 
-  <script src="./Store Catalogue.js"></script>
+  <!-- <script src="./Store Catalogue.js"></script> -->
 
-  <!-- <script src="./Auto-Engineering Company.js"></script> -->
+  <script src="./Auto-Engineering Company.js"></script>
 
   <!-- <script src="./System Components.js"></script> -->
 </body>
