--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <!-- <script src="./Store Catalogue.js"></script> -->
 
-  <script src="./Auto-Engineering Company.js"></script>
+  <!-- <script src="./Auto-Engineering Company.js"></script> -->
 
-  <!-- <script src="./System Components.js"></script> -->
+  <script src="./System Components.js"></script>
 </body>
 </html>
