Unique Sequences task done

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
   <!-- <script src="./System Components.js"></script> -->
 
-  <script src="./Usernames.js"></script>
+  <!-- <script src="./Usernames.js"></script> -->
+
+  <script src="./Unique Sequences.js"></script>
 </body>
 </html>
