Arena Tier taks done

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
   <!-- <script src="./Usernames.js"></script> -->
 
-  <script src="./Unique Sequences.js"></script>
+  <!-- <script src="./Unique Sequences.js"></script> -->
+
+  <script src="./Arena Tier.js"></script>
 </body>
 </html>
